# Ichin-Ecosystem

./: .env.example  .gitignore  AUDIT.md  Audit_JAN_6.md  ICHIN-OS-ARCHITECTURAL-REFACTOR.md  ICHIN-OS-COMPLETE-REFERENCE.md  ICHIN-OS-REPOSITORY-INTEGRATION.md  INICHIN_AUDIT_REPORT.md  Prompt_Check_Report.md  README.md  calentask_1.0.0_amd64.deb
Account/: prompt.md
Account/core/: Cargo.toml
Account/core/src/: auth.rs  storage.rs
Account/server/: Cargo.toml
Account/server/frontend/: dashboard.html
Account/server/src/: main.rs
Calander/Back-End/: Cargo.toml
Calander/Back-End/src/: db.rs  main.rs
Calander/Front-End/: app.js  index.html
Calander/Front-End/components/: CalendarHeader.js  CommandPalette.js  DayView.js  MonthView.js  Sidebar.js  TaskItem.js  TaskPanel.js  WeekView.js
Calander/Front-End/trickle/rules/: rule_for_readme.md
Calander/Front-End/utils/: dateUtils.js  storage.js
Calander/app/calender/: main.py  route.json
Mail/: Cargo.toml  prompt.md
Mail/frontend/: settings-app.js
Mail/frontend/components/: EmailList.js  Logo.js
Mail/frontend/trickle/rules/: rule_for_readme.md
Mail/frontend/utils/: api.js
Mail/src/api/: auth.rs  handler.rs  mod.rs
Mail/src/delivery/: mod.rs  thread.rs  validate.rs
Mail/src/extensions/: expiration.rs  receipts.rs  schedule.rs
Mail/src/gateway/: smtp.rs  translate.rs
Mail/src/internal/: config.rs
Mail/src/protocol/: envelope.rs  handshake.rs  version.rs
Mail/src/security/: keys.rs  mod.rs  sign.rs  spf.rs
Mail/src/storage/: attachment.rs  mailbox.rs
Mail/src/transport/: tls.rs
Protocol/Ichin-CA/: ARCHITECTURE.md  client.py  ichinca.py  root_ca_key.pem  server.py
Protocol/Ichin-DNS/: client.py  ichindns.py  server.py
Protocol/Ichin-Daemon/: ichind.py  realtime.py  sandbox.py  session.py
Protocol/Ichin-Protocol/: cert.pem  ichinp.py  key.pem
Protocol/propmt/blueprints/: prompt-ichin-ca.md  prompt-ichin-daemon.md  prompt-ichin-dns.md  prompt-ichin-protocol.md
Search-Engine/: propmt.md
Search-Engine/client/src/app/: layout.tsx
Search-Engine/server/: Cargo.toml  search.db
Search-Engine/server/src/: main.rs
browser/: main.js  package.json
browser/Back-End/: Cargo.toml
browser/Back-End/src/: main.minimal.rs  main.rs
browser/Back-End/src.backup/routes/: favorites.rs
browser/Back-End/src/routes/: csrf_protection.rs  tabs.rs
browser/Front-End/: app.js  index.html
browser/Front-End/components/: CommandPalette.js  SearchBar.js  Sidebar.js  WebView.js
browser/Front-End/local-assets/css/: fonts.css  lucide.css
browser/Front-End/local-assets/js/: react-dom.production.min.js  react.production.min.js
browser/Front-End/trickle/notes/: README.md
browser/Front-End/trickle/rules/: rule_for_readme.md
browser/Front-End/utils/: constants.js  urlValidator.js
ichin-os/: .env.example  ARCHITECTURE.md
ichin-os/apps/desktop-browser/: main.js  package.json  preload.js
ichin-os/apps/desktop-browser/Back-End/: Cargo.toml  Cargo.toml.minimal  backup_system.rs  mock_backend.py
ichin-os/apps/desktop-browser/Back-End/src/: db.rs  main.rs
ichin-os/apps/desktop-browser/Back-End/src.backup/: db.rs  main.rs  models.rs
ichin-os/apps/desktop-browser/Back-End/src.backup/routes/: workspaces.rs
ichin-os/apps/desktop-browser/Back-End/src/routes/: history.rs  mod.rs  user.rs
ichin-os/apps/desktop-browser/Front-End/: app.js  styles.css
ichin-os/apps/desktop-ui/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1781945847770-630234af68e1f.mjs
ichin-os/apps/mobile-ui/: App.tsx  app.json  package.json  tsconfig.json
ichin-os/apps/web-ui/: index.html  package.json  tsconfig.json  vite.config.ts
ichin-os/docs/architecture/: AI_PLATFORM.md  API_REFERENCE.md  BOOT_PROCESS.md  PACKAGE_MANAGER.md  SECURITY_MODEL.md
ichin-os/ecosystem/developer-portal/: index.html  script.js  style.css
ichin-os/infra/docker/: Dockerfile.agents  Dockerfile.ai-metasearch  Dockerfile.ai-router  Dockerfile.ai-studio  Dockerfile.app-runtime  Dockerfile.browser-engine  Dockerfile.desktop-ui  Dockerfile.knowledge-graph  Dockerfile.mail-ai  Dockerfile.memory  Dockerfile.orchestrator  Dockerfile.security  Dockerfile.ui  Dockerfile.voice-engine  ai-gateway-config.md  docker-compose.yml  event-bus-config.md  nginx-desktop.conf
ichin-os/infra/docs/: api-reference.md  architecture.md
ichin-os/infra/edge-nodes/: config.yaml
ichin-os/infra/iso/: Dockerfile.iso  Makefile  build-iso.py  build-iso.sh  grub.cfg  init.sh
ichin-os/infra/kubernetes/: agents-deployment.yaml  ai-studio-deployment.yaml  app-runtime-deployment.yaml  desktop-ui-deployment.yaml  ichin-configmap.yaml  ichin-namespace.yaml  ingress.yaml  memory-engine-deployment.yaml  orchestrator-deployment.yaml  postgres-deployment.yaml  qdrant-deployment.yaml  redis-deployment.yaml  security-core-deployment.yaml  ui-system-deployment.yaml
ichin-os/kernel/: Cargo.toml  Dockerfile.build  Makefile  build.rs  build.sh  limine.conf  linker.ld  rust-toolchain.toml  target.json
ichin-os/kernel/src/: drivers.rs  fs.rs  ipc.rs  kernel.rs  main.rs  memory.rs  process.rs  rollback.rs  sandbox.rs  scheduler.rs  services.rs  syscall.rs
ichin-os/kernel/src/arch/: gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs
ichin-os/services/agents/: main.py
ichin-os/services/ai-metasearch/: main.py
ichin-os/services/ai-router/: main.py
ichin-os/services/ai-studio/: main.py  requirements.txt  ui_system.py
ichin-os/services/app-runtime/: Cargo.toml
ichin-os/services/app-runtime/src/: main.rs
ichin-os/services/browser-engine/: main.py
ichin-os/services/knowledge-graph/: main.py
ichin-os/services/mail/: Cargo.toml
ichin-os/services/mail-ai/: main.py
ichin-os/services/memory-engine/: main.py  requirements.txt
ichin-os/services/orchestrator/: Cargo.toml  main.py  requirements.txt
ichin-os/services/protocol/: README.md
ichin-os/services/security-core/: Cargo.toml
ichin-os/services/security-core/src/: main.rs
ichin-os/services/system-daemon/: Cargo.toml
ichin-os/services/voice-engine/: main.py  requirements.txt
(+168 files in other folders)
