[package]
name = "ichin-mail"
version = "0.1.0"
edition = "2024"
description = "Ichin Mail — modern secure messaging protocol compatible with SMTP"

[dependencies]
# Core serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
async-trait = "0.1"
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS 1.3
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

# DNS
hickory-resolver = "0.25"

# Cryptographic signing
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# Embedded storage
sled = "0.34"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP API
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
mime_guess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[features]
default = []

[[bin]]
name = "ichin-server"
path = "src/bin/server.rs"

[[bin]]
name = "ichin-send"
path = "src/bin/send.rs"

[[bin]]
name = "ichin-receive"
path = "src/bin/receive.rs"

[[bin]]
name = "ichin-gateway"
path = "src/bin/gateway.rs"
