[package]
name = "ichin-account-core"
version = "0.1.0"
edition = "2024"
description = "Ichin Account — core models, storage, and auth logic"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
sled = "0.34"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"
