[package]
name = "ichin-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
redis = { version = "0.23", features = ["aio"] }
rand = "0.8"
future = "0.3"
